[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_server"
version = "0.2.2"
description = "AI Server using LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kimifish", email = "kimifish@proton.me"}
]
dependencies = [
    "rich",
    "fastapi",
    "uvicorn",
    "requests",
    "python-dotenv",
    "langchain-core",
    "langchain-openai",
    "kimiconfig",
    "caldav",
    "urllib3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/kimifish/ai_server"

[tool.setuptools]
packages = ["ai_server"]
package-dir = {"" = "src"}

[project.scripts]
ai_server = "ai_server.main:main"
