[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_server"
version = "0.3.0"
description = "AI Server using LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "kimifish", email = "kimifish@proton.me"}
]
dependencies = [
    "rich",
    "fastapi",
    "uvicorn",
    "requests",
    "python-dotenv",
    "langchain-core",
    "langchain-openai",
    "kimiconfig",
    "caldav",
    "urllib3",
    "pymysql",
    "langgraph",
    "langchain-mcp-adapters>=0.0.11",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "python-mpd2>=3.1.1",
    "paramiko>=3.5.1",
    "chromadb-client>=1.0.8",
    "deepdiff>=8.5.0",
    "langgraph-checkpoint>=2.0.25",
    "langgraph-checkpoint-mysql>=2.0.15",
    "langchain-deepseek>=0.1.3",
    "kimiutils>=0.2.6",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/kimifish/ai_server"

[tool.setuptools]
packages = ["ai_server"]
package-dir = {"" = "src"}

[project.scripts]
ai_server = "ai_server.main:run"

[tool.uv]
index-url = "http://kimihome.lan:58080/simple"
extra-index-url = ["https://pypi.org/simple"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
